Fixed the flickr logo not showing without a title (in modal).
Fixed the issue of world Nomad feed returning if there was not an image present.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -755,12 +755,14 @@ h1#logo{
 }
 
 .modal .flickr h2{
-  background:url("images/favs/flickr.png") no-repeat scroll 0 5px transparent;
+  background:url("images/favs/flickrIco.png") no-repeat scroll 0 5px transparent;
   font-size:20px;
   font-weight:normal;
   line-height:1.3em;
   margin:0 0 10px;
   padding:0 0 0 22px;
+  min-height: 1.3em;
+  display: block;
  }
 
 .modal .flickr h2 a{
